--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -8,8 +8,8 @@
         <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
     </div>
     <div class="container-fluid">
-        <div class="row row-cols-2">
-            <div class="col-md-4 m-0 bg-white mt-4 py-4">
+        <div class="row row-cols-2 pb-5">
+            <div class="col-md-4 m-0 mt-4 py-4" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center">
                     <h3>Establecimientos</h3>
                     <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
@@ -27,23 +27,17 @@
                             <a id="volver" href="/paginas/reservaDeporte" type="button" class="btn btn-outline-danger">Volver</a>
                         </div>
                         <div class="col-1 py-1">
-                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
+                           <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
                         </div>
                     </form>
                 </div>
             </div>
-            <div class="col md-4 m-0 mt-2 py-4">
+            <div class="col-md-8 m-0 mt-2 py-4" >
                 <div class="text-center">
                     <div id="scrollJugador">
                         {{#each canchas}}
-                        <div class="col-10 mx-auto mt-2" >
-                            <!--<div class="col-3 m-4 bg-info">
-                                <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
-                                <b> {{nombreEstablecimiento}}</b>
-                                <b>Cancha Nº{{numeroCancha}}</b>
-                            </div>-->
-                            <div style="background: rgb(245, 245, 245);">
-                                <div class="card">
+                        <div class="col-8 mx-auto mt-2" >                       
+                                <div class="card" style="background-color: rgb(255, 255, 255, 0.5);">
                                     <div class="card-header">
                                         <b>Cancha Nº {{numeroCancha}} - {{deporte}}</b>
                                     </div>
@@ -55,8 +49,7 @@
                                         <b>De {{horaInicio}}hs</b>
                                         <b>a {{horaFin}}hs</b>
                                     </div>
-                                </div>
-                            </div>
+                                </div>                            
                         </div>
                         {{/each}}
                     </div>
@@ -64,4 +57,4 @@
             </div>
         </div>
     </div>
-</main>
+</div>
