--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -1,15 +1,15 @@
 <div id="ticket">
-    <div class="progress">
+    <div class="progress mb-3">
         <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
     </div>
     <div class="container-fluid">
-        <div class="row row-cols-2">
-            <div class="col-md-4 m-0 bg-white mt-4 py-4">
-                <div class="text-center" disbled>
+        <div class="row row-cols-2 pb-5">
+            <div class="col-md-4 m-0 mt-3 py-4 pb-5" style="background-color: rgb(255, 255, 255, 0.5);">
+                <div class="text-center">
                     <h3>Elige Turno</h3>
                     <button class="btn btn-warning mb-3" id="botonTurnos"
                         onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
-                    <form action="/paginas/reservaDeporte2/{{idCancha}}&{{fecha}}" method="POST">
+                    <form action="/paginas/reservaDeporte2/{{idCancha}}&fechaSeleccionada" method="POST">
                         <div class="container">
                             <div id="texto" class="row justify-content-around">
 
@@ -28,35 +28,6 @@
         </div>
     </div>
 </div>
-<!--
-<div id="ticket">
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
-    </div>
-    <div class="container-fluid">
-        <div class="row row-cols-2">
-            <div class="col-4 m-0 bg-white mt-4 py-5">
-                <div class="text-center" disbled>
-                    <h3>Elige un Deporte</h3>
-                    <form action="/paginas/reservaDeporte1/" method="GET">
-                        <select name="deporte" id="">
-                            {{#each deporte}}
-                            <option value="{{idDeportes}}">{{deporte}}</option>
-                            {{/each}}
-                        </select>
-                        <button type="submit" class="btn btn-success">Aceptar</button>
-                        <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-</div>
--->
-
 <script type="text/javascript">
 let tomarParametro = new URLSearchParams(window.location.href);
 let fechaSeleccionada = tomarParametro.get('fecha');
