--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -1,5 +1,5 @@
 <div id="cancha">
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-8 m-auto py-3">
                 <div class="navbar-brand">
@@ -14,7 +14,9 @@
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">RESERVAS</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                            <li><a class="dropdown-item" href="#">Ver Reservas</a></li>
+                            {{#each canchas}}
+                            <li><a class="dropdown-item" href="reservaEstablecimiento/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a></li>
+                            {{/each}}
                         </ul>
                     </a>
                 </div>
