--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,5 +1,8 @@
 <div id="ticket">
     <div class="container p-5">
+           <div class="container text-center bg-white">
+            <h4 style="color: red;"><p>* Las reservas se podran cancelar 4hs antes de la fecha seleccionada</p></h4>
+        </div>
         <table class="table table-success table-striped ">
             <h2 class="text-white text-center mb-3">Mis Reservas</h2>
             <thead>
@@ -20,11 +23,14 @@
                     <td>{{deporte}}</td>
                     <td id="{{idReserva}}">{{fechaReserva}}</td>
                     <td id="{{ horas fecha}}">{{ hora}}:00 Hs</td>
-                    <td><button id="{{id}}" class="btn btn-warning">Cancelar Reserva</button></td>
+                    <td><form action="/paginas/reservaUsuarioCancelar/{{idReserva}}" method="get">
+                    <button id="{{id}}" class="btn btn-warning" value="">Cancelar Reserva</button>
+                    </form></td>
                 </tr>
                 {{/each}}
             </tbody>
         </table>
+     
            <div class="row py-5">
         <div style="float: left" class="col-2 p-3">
             <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
@@ -33,19 +39,22 @@
     </div> 
 </div>
 <script>     
-     
     function bloquearBoton() {
          let horaActual= new Date().getHours();
         let diaActual= new Date().getDay();    
+        let diaActualMilisegundos= new Date().getTime();    
        {{#each reservas}}        
           horaReserva= document.getElementById({{horas fecha}}).innerHTML;
           horaDeLaReserva = horaReserva.split(/[/ :]/)[0]-4;
           fechaReservada= new Date(document.getElementById({{idReserva}}).innerHTML).getUTCDay();
+          fechaReservadaMilisegundos= +new Date(document.getElementById({{idReserva}}).innerHTML);
+          if (diaActualMilisegundos > fechaReservadaMilisegundos) {
+              document.getElementById({{id}}).disabled= true;
+          }
          if((fechaReservada == diaActual)&&(horaActual > horaDeLaReserva)) {           
               document.getElementById({{id}}).disabled= true;
          }
        {{/each}}
      } 
-     bloquearBoton()
-
+     bloquearBoton()   
 </script>
