--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -1,7 +1,3 @@
-<script>
-    var fechaActual = new Date().toLocaleDateString();
-    document.getElementById('fecha').setAttribute("min", fechaActual);
-</script>
 
 <main id="ticket">
     <div class="progress">
@@ -14,7 +10,7 @@
                     <h3>Establecimientos</h3>
                     <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
                         <label class="mt-3" for="fecha"><b>Elije un día</b></label>
-                        <input id="fecha" type="date" value="09/16/2021" name="fecha" required>
+                        <input id="fecha" type="date" name="fecha" required>
                         {{#each canchas}}
                         <div class="col-md-6 bg-info mx-auto mb-3 mt-2">
                             {{nombreEstablecimiento}} <br>
