--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -54,3 +54,17 @@
         </div>
     </div>
 </div>
+<script>
+    var hoy = new Date();
+var dd = hoy.getDate();
+var mm = hoy.getMonth()+1; 
+var yyyy = hoy.getFullYear();
+if(dd<10){
+        dd='0'+dd
+ } 
+if(mm<10){
+    mm='0'+mm
+ }
+hoy = yyyy+'-'+mm+'-'+dd;
+document.getElementById("fecha").setAttribute("min", hoy);
+</script>
