--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -37,7 +37,9 @@
                                 <td><a >{{cuit}}</a></td>
                                 <td><b><a class="link link-success" href="cancha/{{idEstablecimiento}}">Agregar Cancha</a></b>
                                 <br>
-                                <b><a class="link link-primary" href="misCanchas/{{idEstablecimiento}}">Mis Canchas</a></b></td>
+                                <b><a class="link link-primary" href="misCanchas/{{idEstablecimiento}}">Mis Canchas</a></b>
+                                <br>
+                                <b><a class="link link-danger" href="mapa">Mapa</a></b></td>
                             </tr>
                             {{/each}}
                         </tbody>
