--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -74,6 +74,7 @@
                             <tr>
                                 <th>Establecimiento</th>
                                 <th>Dirección</th>
+                                <th>Opción</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -83,6 +84,7 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
+                                <td><a href="/paginas/mapa">Mapa</a></td>
                             </tr>
                             {{/each}}
                         </tbody>
