tutorial,mapa vista usuario jugador

--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -41,7 +41,7 @@
                                 <br>
                                 <b><a class="link link-primary" href="misCanchas/{{idEstablecimiento}}">Mis Canchas</a></b>
                                 <br>
-                                <b><a class="link link-danger" href="mapa">Mapa</a></b></td>
+                                <b><a class="link link-danger" href="mapa/{{idEstablecimiento}}">Mapa</a></b></td>
                             </tr>
                             {{/each}}
                         </tbody>
