--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -32,6 +32,21 @@
                     <a type="link" class="nav-link" href="#" aria-disabled="true" data-bs-toggle="modal"
                     data-bs-target="#nosotros" aria-controls="offcanvasRight">Nosotros</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
+                        aria-expanded="false">Tutorial</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdown04">
+                        <li><a class="dropdown-item" href="/paginas/tutorialJugador">Ingreso como jugador</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/paginas/tutorialCancha">Ingreso como dueño de cancha</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/paginas/tutorialReserva">Realizar reserva</a></li>
+                    </ul>
+                </li>
                 
             </ul>
         </div>
@@ -146,3 +161,4 @@
 
 document.getElementById('accesoDuenio').style.display= estado
 </script>
+
