--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,8 +35,8 @@
     });
     </script>
 
-{{!--GoogleMaps--}}
-    <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+{{!--GoogleMaps --}}
+    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
