--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -18,16 +18,11 @@
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
                         <form class="d-flex" method="GET" action="">
-                            <input type="search" class="form-control" id= "formulario" placeholder="Buscar" autofocus>
+                            <input type="text" class="form-control" id= "busqueda" placeholder="Buscar" onkeyup="buscar();"autofocus>
                             <button class="btn btn-danger" type="submit" id="boton">
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
-                       <script>
-                           const formulario = document.querySelector('#formulario');
-                           const boton = document.querySelector('#boton');
-                           
-                       </script> 
                     </div>
 
                 </div>
@@ -40,7 +35,7 @@
                                 <th>Deporte</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tblEquipos">
                             {{#each equipos}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
@@ -62,7 +57,7 @@
                         <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus required>
+                        <input type="text" class="form-control" id="busqueda" placeholder="Buscar" onkeyup="buscar1();" autofocus required>
                         <button class="btn btn-danger" type="reset">
                             <i class="fas fa-search"></i> 
                         </button>
@@ -76,7 +71,7 @@
                                 <th>Dirección</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tblCancha">
                             {{#each canchas}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
@@ -134,3 +129,52 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    function buscar() {
+        var tabla = document.getElementById('tblEquipos');
+        var busqueda = document.getElementById('busqueda').value.toLowerCase();
+        var cellsOfRow = " ";
+        var found = false;
+        var compareWith = " ";
+        for (var i = 0; i < tabla.rows.length; i++) {
+            cellsOfRow = tabla.rows[i].getElementsByTagName('td')
+            found = false;
+            for (var j = 0; j < cellsOfRow.length && !found; j++) {
+                compareWith = cellsOfRow[j].innerHTML.toLowerCase();
+                if (busqueda.length == 0 || (compareWith.indexOf(busqueda) > -1)) {
+                    found = true;
+                }
+            }
+            if (found) {
+                tabla.rows[i].style.display = '';
+                
+            } else {
+                tabla.rows[i].style.display = 'none';  
+            }
+         
+        }  
+    }
+    function buscar1() {
+        var tabla = document.getElementById('tblCancha');
+        var busqueda = document.getElementById('busqueda1').value.toLowerCase();
+        var cellsOfRow = " ";
+        var found = false;
+        var compareWith = " ";
+        for (var i = 0; i < tabla.rows.length; i++) {
+            cellsOfRow = tabla.rows[i].getElementsByTagName('td')
+            found = false;
+            for (var j = 0; j < cellsOfRow.length && !found; j++) {
+                compareWith = cellsOfRow[j].innerHTML.toLowerCase();
+                if (busqueda.length == 0 || (compareWith.indexOf(busqueda) > -1)) {
+                    found = true;
+                }
+            }
+            if (found) {
+                tabla.rows[i].style.display = '';
+            } else {
+                tabla.rows[i].style.display = 'none';
+            }
+        }
+    }
+</script>
+
