--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -9,7 +9,6 @@
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">EQUIPOS</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown04">
-<<<<<<< HEAD
                             <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#misEquipo"
                                     data-bs-whatever="@equipo">Mis Equipos</a></li>
                             <li>
@@ -22,13 +21,6 @@
                             </li>
                             <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a>
                             </li>
-=======
-                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a></li>
->>>>>>> 6f46d83282b874d3e40492588120e6b424779f94
                         </ul>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
@@ -52,8 +44,8 @@
                         <tbody id="tblEquipos">
 
                             {{#each equipos }}
-                            <tr>
-                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                            <tr id="texto">
+                                <td  data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
                                     {{nombreUsuario}}
                                 </td>
                                 <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a>
@@ -74,13 +66,8 @@
                         <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-<<<<<<< HEAD
                         <input id="busqueda1" type="text" class="card-filter" placeholder="Buscar" onkeyup="buscar1();" autofocus>
                         <button class="btn btn-danger" type="reset" id="boton">
-=======
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus>
-                        <button class="btn btn-danger" type="reset">
->>>>>>> 6f46d83282b874d3e40492588120e6b424779f94
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
@@ -96,7 +83,7 @@
                         </thead>
                         <tbody id="tblCancha">
                             {{#each canchas}}
-                            <tr>
+                            <tr id="texto1">
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
@@ -165,7 +152,7 @@
         var cellsOfRow = " ";
         var found = false;
         var compareWith = " ";
-        for (var i = 1; i < tabla.rows.length; i++) {
+        for (var i = 0; i < tabla.rows.length; i++) {
             cellsOfRow = tabla.rows[i].getElementsByTagName('td')
             found = false;
             for (var j = 0; j < cellsOfRow.length && !found; j++) {
@@ -176,10 +163,12 @@
             }
             if (found) {
                 tabla.rows[i].style.display = '';
+                
             } else {
-                tabla.rows[i].style.display = 'none';
+                tabla.rows[i].style.display = 'none';  
             }
-        }
+         
+        }  
     }
     function buscar1() {
         var tabla = document.getElementById('tblCancha');
@@ -187,7 +176,7 @@
         var cellsOfRow = " ";
         var found = false;
         var compareWith = " ";
-        for (var i = 1; i < tabla.rows.length; i++) {
+        for (var i = 0; i < tabla.rows.length; i++) {
             cellsOfRow = tabla.rows[i].getElementsByTagName('td')
             found = false;
             for (var j = 0; j < cellsOfRow.length && !found; j++) {
